# word-chain

backend/word-chain/: Cargo.toml
backend/word-chain/src/: account.rs  credentials.rs  encrypt.rs  jwt.rs  main.rs  request.rs  response.rs  route.rs  routes.rs
backend/word-chain/src/credentials/: basic.rs  jwt.rs  tokens.rs
backend/word-chain/src/routes/: account.rs  login.rs  root.rs
frontend/word-chain/: .gitignore  package.json
