[package]
name = "word-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0"
base64 = "0"
bitflags = "2"
cookie = "0"
chrono = { version = "0", features = ["clock"] }
dotenvy = "0"
headers = "0"
hex = "0"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
lazy_static = "1"
rand = "0.8.5"
sha3 = "0"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0"